remaster ej 9 guia 4 d

--- a/3-guia/ejercicios-3/ej-30-3.tex
+++ b/3-guia/ejercicios-3/ej-30-3.tex
@@ -42,7 +42,7 @@ $$
 $$
 formas de agarrarlos.
 
-La cantidad de $B$ que cumplen lo pedido son \cajaResultado{35}
+La cantidad de conjuntos $B \en \partes(X)$ que cumplen lo pedido son \cajaResultado{35}
 
 \begin{aportes}
   \item \aporte{\dirRepo}{naD GarRaz \github}
