detalle ej 9 guia 4

--- a/4-guia/ejercicios-4/ej-9-4.tex
+++ b/4-guia/ejercicios-4/ej-9-4.tex
@@ -53,7 +53,7 @@
         Ahora tengo que \textit{toquetear} esa expresión para que quede algo de la pinta
         $\green{\text{divisor}} \times \blue{\text{cociente}} + \purple{\text{resto}}$:
         $$
-          14 \cdot a = \green{28} \cdot \blue{9q} + \purple{70}
+          14 \cdot a \ua{=}{\text{\tiny también se podría}\\\text{\tiny tomar congruencia 28}\\\text{\tiny en ambos miembros }} \green{28} \cdot \blue{9q} + \purple{70}
           \sii
           14 \cdot a = \green{28} \cdot \blue{9q} + \purple{2\cdot 28 + 14}
           \igual{\red{!}}
