fix ej 23 guia 4 item c

--- a/4-guia/ejercicios-4/ej-23-4.tex
+++ b/4-guia/ejercicios-4/ej-23-4.tex
@@ -187,8 +187,9 @@
             4 \cdot \magenta{(-5)} + 4 & = & \blue{-16} \\
             4 \cdot \magenta{(-3)} + 4 & = & \blue{-8}  \\
             4 \cdot \magenta{(-2)} + 4 & = & \blue{-4}  \\
+            4 \cdot \magenta{0} + 4    & = & \blue{4}   \\
             4 \cdot \magenta{1} + 4    & = & \blue{8}   \\
-            4 \cdot \magenta{0} + 4    & = & \blue{4}
+            4 \cdot \magenta{3} + 4    & = & \blue{16}
           \end{array}
         $$
         reemplazando esos valores de $a$ en $\llamada1$ se obtiene que  $ \llamada1 \en \enteros$.
