--- a/4-guia/ejercicios-4/ej-23-4.tex
+++ b/4-guia/ejercicios-4/ej-23-4.tex
@@ -163,13 +163,13 @@
         $$
           4a + 4 \divideA a^2 + 11a + 14
         $$
-        Busco eliminar la a del lado derecho:
+        Busco eliminar la $a$ del lado derecho:
         $$
           \llave{l}{
             4a + 4 \divideA a^2 + 11a + 14 \\
             4a + 4 \divideA 4a + 4
           }
-          \flecha{\red{!}}
+          \Sii{\red{!}}
           \llave{l}{
             4a + 4 \divideA 16 \\
             4a + 4 \divideA 4a + 4
