--- a/4-guia/ejercicios-4-extra/ej-extra-17-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-17-4.tex
@@ -5,22 +5,38 @@ Si el mcd es $d$:
 $$
   d = (3a+6 : 7a^2 - a -3)
 $$
-Puedo usar Euclides para simplificar la expresión del mcd:
+% Puedo usar Euclides para simplificar la expresión del mcd:
+% $$
+%   \polyset{vars=a}
+%   \divPol{7a^2-a-3}{3a+6}
+% $$
+% Por lo tanto $d$ queda:
+% $$
+%   d = (3a+6 : 7a^2 - a -3) =
+%   \cajaResultado{(3a + 6 : 27)}
+% $$
+Tengo que $d$ es un \textit{divisor común a ambas expresiones:}
 $$
-  \polyset{vars=a}
-  \divPol{7a^2-a-3}{3a+6}
+  \llave{l}{
+    d \divideA 7a^2 - a - 3\\
+    d \divideA 3a + 6
+  }
+  \Sii{$3F_1 - 7aF_2 \to F_1$}
+  \llave{l}{
+    d \divideA - 45a - 9\\
+    d \divideA 3a + 6
+  }
+  \Sii{$F_1 + 15F_2 \to F_1$}
+  \llave{l}{
+    d \divideA  81 \\
+    d \divideA 3a + 6
+  }
 $$
-Por lo tanto $d$ queda:
+Como $81 = 3^4$, los posibles divisores $d$:
 $$
-  d = (3a+6 : 7a^2 - a -3) =
-  \cajaResultado{(3a + 6 : 27)}
+  d \en \set{1, 3, 9, 27, 81}
 $$
-Por lo tanto como $d \divideA 27$:
-$$
-  d \en \set{1,3,9,27} = \set{1,3,3^2, 3^3}
-$$
-¿Para que valor de $a$ valdrá  $d=1$? Empiezo a ver si es divisible por 3:
-
+Empiezo a ver si es divisible por $d = 3$:
 Tabla de restos para $d = 3$:
 $$
   \begin{array}{|r||c|c|c|}
@@ -30,12 +46,23 @@ $$
     r_3(7a^2 - a - 3) & 0 & 0 & \red{2} \\ \hline
   \end{array}
 $$
-No son ambas expresiones divisibles por 3 cuando
+Cuando tenga valores de:
 $$
+  \llave{l}{
+    \congruencia{a}{0}{3} \\
+    \otext                \\
+    \congruencia{a}{1}{3}
+  }
+  \sisolosi
+  d \distinto 1
+$$
+Cuando
+$
   \congruencia{a}{2}{3}
-$$
+$
+no son \underline{ambas expresiones} divisibles por 3, por eso se descarta.
 
-Dado que los otros posibles divisores (9, 27) son potencias de 3, se concluye que:
+Dado que los otros posibles divisores (9, 27, 81) son potencias de 3, se concluye que solo valdrá que:
 $$
   \cajaResultado{
     d \neq 1
@@ -47,9 +74,12 @@ $$
     }
   }
 $$
-Dado que para esos valores de $a$ la expresión $7a^2-a-3$ no divisible por ninguna potencia de 3.
+
+Importante que en este ejercicio no pidieron encontrar los posibles valores de $d$, solo que fueran \underline{distintos de uno}. De no ser así
+habría que haber hecho, por ejemplo la tabla de restos 9, para ver si el nuevo era un posible $d$ y así con los posibles divisores.
 
 \begin{aportes}
   \item \aporte{\dirRepo}{naD GarRaz \github}
   \item \aporte{https://github.com/daniTadd}{Dani Tadd \github}
+  \item \aporte{https://github.com/olivportero}{Oliv Portero \github}
 \end{aportes}
