--- a/4-guia/ejercicios-4-extra/ej-extra-17-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-17-4.tex
@@ -81,5 +81,5 @@ habría que haber hecho, por ejemplo la tabla de restos 9, para ver si el nuevo 
 \begin{aportes}
   \item \aporte{\dirRepo}{naD GarRaz \github}
   \item \aporte{https://github.com/daniTadd}{Dani Tadd \github}
-  \item \aporte{https://github.com/olivportero}{Oliv Portero \github}
+  \item \aporte{https://github.com/olivportero}{Olivia Portero \github}
 \end{aportes}
