--- a/3-guia/ejercicios-3-extra/ej-extra-6-3.tex
+++ b/3-guia/ejercicios-3-extra/ej-extra-6-3.tex
@@ -22,7 +22,7 @@ $$
   \sii
   \paratodo y \en \cod(f) \existe x \en \dom(f) \talque f(x) = y.
 $$
-De ahí podemos concluir que \underline{en este ejecicio} las funciones como tienen la misma cantidad
+De ahí podemos concluir que \underline{en este ejercicio} las funciones como tienen la misma cantidad
 de elementos en el $\cod(f)$ y en el $\dom(f)$ serán \textit{biyectivas}.
 \begin{center}
   \textit{¿Y a mí qué me importa?}
@@ -32,7 +32,7 @@ toooodos los numeritos de los conjuntos y no van a poder repetirse \faIcon[regul
 
 \bigskip
 
-\textit{Sobre $\cyan{f(3) \leq f(4) \leq f(5)} \ytext \magenta{f(1) + f(2)  \textit{ es impar}}$:}
+\textit{Sobre $\cyan{f(3) \leq f(4) \leq f(5)}$  y \magenta{$f(1) + f(2)$ es impar}:}
 
 Por ejemplo estamos buscando algo así:
 $$
@@ -66,7 +66,7 @@ De esta manera tengo 32 formas de satisfacer que \magenta{$f(1) + f(2)$  \textit
 
 \bigskip
 
-\underline{No importa} cuales \cyan{3} números \textit{distintos} $\set{\cyan{a, b, c}} \en \cod(f)$
+Con el tema de la otra condición, los de $\cyan{f(3), f(4), f(5)}$, \underline{no importa} cuales \cyan{3} números \textit{distintos} $\set{\cyan{a, b, c}} \en \cod(f)$
 agarre, siempre van a cumplir que \cyan{uno va a ser el menor, otro estará en el medio y otro será el mayor} \rollingEyes.
 Listo. Agarro \cyan{3} números entre los 6 que quedan:
 $$
