--- a/4-guia/ejercicios-4-extra/ej-extra-12-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-12-4.tex
@@ -7,7 +7,11 @@
 
 \textit{Coprimizar: }
 $$
-  d = (a^2b^4 : 7^5(-a + b)) \Sii{$a = 7A$}[$b = 7B$] 7^6 \cdot (A^2B^4 : B - A ) \sii d = 7^6\cdot D
+  d = (a^2b^4 : 7^5(-a + b))
+  \Sii{$a = 7A$}[$b = 7B$]
+  d = 7^6 \cdot (A^2B^4 : B - A )
+  \sii d = 7^6\cdot D
+  \quad \text{con}\quad (A:B) = 1
 $$
 
 $$
