vfix extra 9 guia 2

--- a/2-guia/ejercicios-2-extra/ej-extra-9-2.tex
+++ b/2-guia/ejercicios-2-extra/ej-extra-9-2.tex
@@ -48,6 +48,14 @@ $$
   10h^2 + 5h \mayor{\red{!}} 6(h+1)^2
 $$
 Esa expresión es verdadera $ \paratodo n \en \naturales$.
+  {\small
+    \parrafoDestacado[\atencion]{
+      Dependiendo del grado de paranoia que uno tenga se va a poner a probar eso
+      de todas las formas existentes, con análisis de función límites, derivadas, transformada de Fourier y análisis complejo.
+      Pero, yo no iría mucho más lejos que decir que el coeficiente principal de uno es más grande que el otro y son las dos crecientes y listo.
+      Dicho eso es verdad que el criterio final será del corrector, asi, que andá a preguntale a alguien y listo.
+    }
+  }
 
 Dado que $p(1), p(h) \ytext p(h+1)$ resultaron ser verdaderas, por el principio de inducción también lo es $p(n)$ para todo $n \en \naturales$ como se
 quería mostrar.
