fix link guia 2

--- a/2-guia/ejercicios-2-extra/ej-extra-9-2.tex
+++ b/2-guia/ejercicios-2-extra/ej-extra-9-2.tex
@@ -1,4 +1,4 @@
-\begin{enunciado}{ejExtra}
+\begin{enunciado}{\ejExtra}
   Probar que $\productoria{k=1}{n}\frac{10k - 5}{2k} > n 3^{n-1}$ para todo $n \en \naturales$.
 \end{enunciado}
 
