flag ej parcial 14 guia 4

--- a/3-guia/ejercicios-3-extra/ej-extra-4-3.tex
+++ b/3-guia/ejercicios-3-extra/ej-extra-4-3.tex
@@ -18,7 +18,7 @@ Un número de 20 dígitos, donde solo puedo poner, 0, 2, 3 o 9:
         $$
 \end{enumerate}
 
-Con toda esa info, la cantidad de números de 20 cifras sería::
+Con toda esa info, la cantidad de números de 20 cifras sería:
 $$
   \cajaResultado{
     \blue{3} \cdot
