--- a/4-guia/ejercicios-4-extra/ej-extra-15-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-15-4.tex
@@ -1,4 +1,5 @@
 \begin{enunciado}{\ejExtra}
+    \red{Este ejercicio está pendiente de revisión, OJO} 
   Sean $a,\,b \en \enteros$ tales que $(a:b) = 1$. Calcular los posibles valores de $(a^2+3b^2 : 2a^2 + 11b^2)$
   y dar un ejemplo para cada uno de ellos.
 \end{enunciado}
