add parcial 9 guia 1

--- a/4-guia/ejercicios-4-extra/ej-extra-15-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-15-4.tex
@@ -77,6 +77,8 @@ $$
     }
   }
 $$
+Fijate que no importa como combines los restos de las tablas, nunca podés formar un 5.
+
 Ese resultado dice que para que suceda que $ 5 \divideA a^2 + 3b^2$ se requiere que:
 $$
   \congruencia{a}{0}{5}
