add extra 22 guia 4

--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -338,6 +338,7 @@
 }
 
 %%% Emoticones
+\def\click{{\small click click \faIcon{mouse}}}
 \def\poo{\marron{\faIcon{poo}}\xspace}
 \def\grimaceR{\faIcon[regular]{grimace}\xspace}
 \def\grimace{\faIcon{grimace}\xspace}
